Make sure text in Markdown help is aligned correctly

--- a/app/assets/stylesheets/common.css.scss
+++ b/app/assets/stylesheets/common.css.scss
@@ -1087,7 +1087,6 @@ abbr.geo {
     display: inline-block;
     vertical-align: top;
     background-color: #ddd;
-    margin-left: 15px;
     padding: 5px 10px 10px 10px;
     font-size: 12px;
 
@@ -1097,7 +1096,6 @@ abbr.geo {
 
     th {
       vertical-align: top;
-      padding: 0px 15px 0px 0px !important;
     }
 
     td {
@@ -1108,12 +1106,10 @@ abbr.geo {
 
     input.richtext_doedit {
       margin-top: 5px !important;
-      margin-right: 10px !important;
     }
 
     input.richtext_dopreview {
       margin-top: 5px !important;
-      margin-left: 10px !important;
     }
   }
 }
