--- a/app/assets/stylesheets/ltr.css.scss
+++ b/app/assets/stylesheets/ltr.css.scss
@@ -215,3 +215,28 @@ input.openid_url {
   background: image-url('openid_input.png') repeat-y left white;
   padding-left: 16px;
 }
+
+/* Rules for rich text editors */
+
+.richtext_container {
+  .richtext_help {
+    margin-left: 15px;
+
+    th {
+      text-align: left;
+      padding: 0px 15px 0px 0px !important;
+    }
+
+    td {
+      text-align: left;
+    }
+
+    input.richtext_doedit {
+      margin-right: 10px !important;
+    }
+
+    input.richtext_dopreview {
+      margin-left: 10px !important;
+    }
+  }
+}
